# Distributed-File-Backup-Manager

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  makefile
src/UI/: MainWindow.cpp  MainWindow.h
src/client/: Client.cpp  Client.h  ClientSimulator.cpp  ClientSimulator.h  IClient.h  MAIN.cpp  main.cc
